--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,12 @@
-* 
-    box-border: border-box
+// Глобальные настройки
+@import grid
+//Настройки шрифтов 
+@import fonts
+//Настройки цветов 
+@import colors
+// Настройки интерфейса 
+@import interface
+// Шапка сайта
+@import "section/_navbar"
+// Блок hero
+@import "section/_hero"
