--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,47 @@
   margin: auto;
 }
 
+@media (max-width: 1199px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 991px) {
+  .container {
+    max-width: 750px;
+  }
+  .navbar__mobile, .navbar__lendline {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 0 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 100%;
+    padding: 0 30px;
+  }
+  .logo {
+    display: none;
+  }
+  .menu__nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .menu__link {
+    margin-bottom: 20px;
+  }
+}
+
 @font-face {
   font-family: 'Proxima Nova Semibold';
   src: url("../fonts/ProximaNova-Semibold.eot");
@@ -45,6 +86,12 @@ body {
   background-color: #507fe1;
   color: #ffffff;
   font-family: "Proxima Nova Semibold", sans-serif;
+}
+
+@media (max-width: 576px) {
+  .button-o {
+    font-size: 10px;
+  }
 }
 
 .navbar {
@@ -95,8 +142,8 @@ body {
   background: #507fe1;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+  -webkit-transform: translateY(-200%);
+          transform: translateY(-200%);
 }
 
 .menu__active {
@@ -166,7 +213,7 @@ body {
 }
 
 .hero {
-  background: #ffffff url("../img/hero-bg.jpg") no-repeat center top 80px;
+  background: #ffffff url("../img/hero-bg.png") no-repeat center top 80px;
   background-size: contain;
   padding-top: 200px;
   padding-bottom: 270px;
@@ -183,5 +230,12 @@ body {
   font-size: 30px;
   margin-bottom: 67px;
   font-family: "Proxima Nova Semibold", sans-serif;
+}
+
+@media (max-width: 991px) {
+  .hero {
+    background-size: cover;
+    background-position: top left 30%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
