--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -16,3 +16,8 @@ body
     background-color: $primary
     color: #ffffff
     +bold
+
+@media (max-width: 576px)
+    .button-o
+        font-size: 10px
+    
