--- a/sass/section/_navbar.sass
+++ b/sass/section/_navbar.sass
@@ -30,8 +30,10 @@
     background: $primary
     transition: 0.2s 
     transform: translateY(-200%)
-    &__active 
+    opacity: 0
+    &_active 
         transform: translateY(0)
+        opacity: 1
     &__nav
         display: flex
         align-items: center
