--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -32,3 +32,5 @@
             flex-direction: column
         &__link
             margin-bottom: 20px
+            &:last-child
+                margin-bottom: 0
