--- a/sass/section/_hero.sass
+++ b/sass/section/_hero.sass
@@ -1,8 +1,9 @@
 .hero
-    background: #ffffff url('../img/hero-bg.png') no-repeat center top 80px
+    background: #ffffff url('../img/hero-bg.png') no-repeat center top
     background-size: contain
     padding-top: 200px
     padding-bottom: 270px
+    margin-top: 80px
     &__title
         font-size: 30px
         margin-bottom: 40px
