--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -16,6 +16,8 @@ body
     background-color: $primary
     color: #ffffff
     +bold
+.bg-secondary 
+    background: $bg-secondary
 
 @media (max-width: 576px)
     .button-o
