added offer block

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,43 @@ body {
   background: #f1f1f1;
 }
 
+.input {
+  height: 80px;
+  padding-left: 30px;
+  border: 1px solid #dddddd;
+}
+
+.checkbox {
+  display: none;
+}
+
+.checkbox:hover {
+  cursor: pointer;
+}
+
+.checkbox:checked + label:before {
+  background: #507fe1;
+}
+
+.checkbox-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 42px;
+}
+
+.checkbox-label:before {
+  content: "";
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #dddddd;
+  margin-right: 20px;
+}
+
 @media (max-width: 576px) {
   .button-o {
     font-size: 10px;
@@ -256,6 +293,9 @@ body {
 .offer-block {
   background: #ffffff;
   padding: 80px;
+  -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3);
+  margin-top: -200px;
 }
 
 .offer__title {
@@ -275,12 +315,67 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   max-width: 900px;
+  margin-bottom: 25px;
+}
+
+.form__row:last-child {
+  margin: 0;
+}
+
+.form__label {
+  display: block;
+  font-size: 17px;
+  margin-bottom: 15px;
+}
+
+.form__group {
+  -ms-flex-preferred-size: 33.33%;
+      flex-basis: 33.33%;
+}
+
+.form__input {
+  width: 90%;
+  border-right-width: 0px;
+}
+
+.form__input:last-child {
+  border-right-width: 1px;
+}
+
+.form__button {
+  height: 80px;
+}
+
+@media (max-width: 991px) {
+  .form__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form__row-checkbox {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .form__group {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    width: 100%;
+  }
+  .form__input {
+    margin-bottom: 20px;
+  }
+  .form__button {
+    width: 100%;
+  }
+  .offer-block {
+    padding: 20px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
