--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -18,6 +18,28 @@ body
     +bold
 .bg-secondary 
     background: $bg-secondary
+.input
+    height: 80px
+    padding-left: 30px 
+    border: 1px solid #dddddd
+
+.checkbox
+    display: none
+    &:hover 
+        cursor: pointer
+    &:checked + label:before
+        background: $primary
+    &-label 
+        display: flex
+        align-items: center
+        margin-right: 42px
+        &:before
+          content: ""
+          display: inline-block
+          width: 30px
+          height: 30px
+          border: 1px solid #dddddd
+          margin-right: 20px
 
 @media (max-width: 576px)
     .button-o
