edit bg hero section

--- a/sass/section/_hero.sass
+++ b/sass/section/_hero.sass
@@ -1,6 +1,6 @@
 .hero
-    background: #ffffff url('../img/hero-bg.png') no-repeat center top
-    background-size: contain
+    background: #f1f1f1 url('../img/hero-bg.png') no-repeat center top
+    background-size: inherit
     padding-top: 200px
     padding-bottom: 270px
     margin-top: 80px
