--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,8 @@ body {
 }
 
 .hero {
-  background: #ffffff url("../img/hero-bg.png") no-repeat center top;
-  background-size: contain;
+  background: #f1f1f1 url("../img/hero-bg.png") no-repeat center top;
+  background-size: inherit;
   padding-top: 200px;
   padding-bottom: 270px;
   margin-top: 80px;
