--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -10,12 +10,15 @@ body
     +bold
     background: none
 .button
+    position: relative
     border: none
     text-transform: uppercase
     padding: 25px 45px
     background-color: $primary
     color: #ffffff
     +bold
+    &:focus
+        border-right-width: 1px
 .bg-secondary 
     background: $bg-secondary
 .input
