--- a/sass/section/_offer.sass
+++ b/sass/section/_offer.sass
@@ -28,13 +28,15 @@
         margin-bottom: 15px
     &__group
         flex-basis: 33.33%
+        margin-left: 2px
     &__input
         width: 90% 
         border-right-width: 0px
         &:last-child
             border-right-width: 1px
     &__button
-        height: 80px
+        height: 84px
+
 @media  (max-width: 991px)
     .form
         &__row
